# smtpf

./: .gitattributes  .gitignore  FILE.TXT  LICENSE.md  MANIFEST.TXT.in  README.md  aclocal.m4  acsite.m4  configure  configure.in  install.sh.in  makefile.in
doc/: 2.0-RELEASE-NOTES.TXT  2.1-RELEASE-NOTES.TXT  2.2-RELEASE-NOTES.TXT  BarricadeMX.html  BarricadeMX.html.in  CHANGES.TXT  INSTALL.TXT  LICENSE.TXT  access-map.html  access-map.html.in  emew-patent.txt  glo.txt  glossary.html  glossary.html.in  install.html  install.html.in  license.html  license.html.in  mailto.js  manual.shtml.in  pat.txt  reply-header.html  reply.awk  reply.html.in  reply.sh  route-map.html  route-map.html.in  runtime.html  runtime.html.in  smtpf-cf.html  smtpf-cf.html.in  smtpf.0.in  style.css  summary.html  summary.html.in  syslog  syslog-bynum  syslog-footer.html  syslog-header.html  syslog.awk  (+2 more)
doc/Img/: BarricadeMX.vsd  EMEW-fig1-5.vsd  EMEW-fig1.vsd  EMEW-fig2.vsd  EMEW-fig3.vsd  EMEW-fig4.vsd  EMEW-fig5.vsd  EMEW-fig6.vsd  EMEW-fig6v2.vsd  GLO-figures-v2.vsd  GLO-figures.vsd  RET-ID-fig5.vsd  RET-ID-fig5v2.vsd  RET-ID-fig5v3.vsd
examples/: Makefile.in  access-defaults.cf  access.cf  dump.mk  netbsd.rcd  netbsd.rcd.in  route.cf  sendmail-hub.mc  smtp-test-stuff.txt  smtpf.lua  startup.sh.in  sync.sh  url-shorteners.cf  welcome.txt
examples/extra/: bmx-antiphishingreply-update.pl  bmx-uribl-update.pl  bmx_trap_trainer.pl
examples/spamassassin/: barricademx.cf  barricademx.pm  smf.cf  smf.pm
package/FreeBSD/: +CONTENTS.in  +DISPLAY.in  makefile.in  pack.sh.in
package/Linux.rpm/: makefile.in  smtpf.spec  smtpf2.spec
package/OpenBSD/: +COMMENT.in  +CONTENTS.in  +DESC.in  makefile.in  pack.sh.in
package/Windows/: installer.nsi  installer.nsi.in  servicelib.nsh
src/: .gdbinit  access.c  access.h  attachment.c  attachment.h  avastd.c  avastd.h  built.c  cache.c  cache.h  clamd.c  clamd.h  cli.c  cli.h  click.c  click.h  cmd.c  concurrent.c  concurrent.h  config.h.in.in  ctasd.c  ctasd.h  digest.c  digest.h  dsn.c  dup-msg.txt  dupmsg.c  dupmsg.h  emew-test.c  emew.c  emew.h  filter.c  filter.h  flag.h  four21.c  four21.h  fpscand.c  fpscand.h  freemail.c  freemail.h  (+77 more)
src/avast/: avastd_interface.txt
src/f-prot/: appendix_a.html  appendix_c.html  fpscand.8.html
src/f-prot/appendix_c_files/: chmstyle.htm  printnew.css
src/f-prot/fpscand.8_files/: newstyles.css  reset-fonts-grids.css  stylish.css
